--- a/02_YSQL_Development.ipynb
+++ b/02_YSQL_Development.ipynb
@@ -738,7 +738,7 @@
     "\n",
     "\n",
     "cd $YB_PATH_BIN\n",
-    "./ysqlsh -d ${DB_NAME} -c \"\\d+ idx_demo_val\" -c \"\\d+ tbl_demo\"\n"
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ idx_demo_val\" -c \"\\d+ tbl_demo\""
    ]
   },
   {
