--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -5,12 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div><br>\n",
+    "<div style=\"width:100%; background-color: #121017;\"><a target=\"_blank\" href=\"http://university.yugabyte.com?utm_source=gitpod&utm_medium=notebook\"><img src=\"assets/YBU_Logo.png\" /></a></div><br>\n",
     "\n",
     "> **YugabyteDB YSQL Development**\n",
     ">\n",
-    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/courses/yugabytedb-ysql-development).\n",
+    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/courses/yugabytedb-ysql-development?utm_source=gitpod&utm_medium=notebook).\n",
     ">\n",
+    "\n",
     "<br>\n",
     "This notebook file is:\n",
     "\n",
@@ -72,7 +73,7 @@
    "metadata": {},
    "source": [
     "## ⛑️ Getting help\n",
-    "The best way to get help from the Yugabyte University team is to post your question on YugabyteDB Community Slack in the #training or #yb-university channels. To sign up, visit [https://communityinviter.com/apps/yugabyte-db/register](https://communityinviter.com/apps/yugabyte-db/register)."
+    "The best way to get help from the Yugabyte University team is to post your question on YugabyteDB Community Slack in the #training channels. To sign up, visit [YugabyteDB Community Slack](https://join.slack.com/t/yugabyte-db/shared_invite/zt-xbd652e9-3tN0N7UG0eLpsace4t1d2A?utm_source=gitpod&utm_medium=notebook)."
    ]
   },
   {
@@ -373,9 +374,7 @@
     "Because YugabyteDB reuses the PostgreSQL query layer, it is possible to view an Explain Plan for a query. YugabyteDB enhances the Explain Plain so that it shows how a query accesses distributed storage.\n",
     "\n",
     "<details>\n",
-    "      <summary>\n",
-    "      View Example Output\n",
-    "      </summary>\n",
+    "  <summary><b>Show Example</b></summary>\n",
     "\n",
     "```sql\n",
     "Seq Scan on public.tbl_no_pk (cost=0.00..102.50 rows=1000 width=68) (actual time=3.263..3.289 rows=1 loops=1)\n",
@@ -547,6 +546,9 @@
    "source": [
     "##### Why are there three tablets each with a tablet_id ?\n",
     "\n",
+    "<details>\n",
+    "<summary><b>Show Answer</b></summary>\n",
+    "\n",
     "Various properties and configurations determine the number of tablets for a specific table in a given YugabyteDB cluster. \n",
     "\n",
     "Your YugabyteDB cluster is a three node cluster. Each node runs two processes: a YB-Master process and a YB-TServer process. Your cluster has a replication factor of three, which means that each tablet leader will have two tablet followers. \n",
@@ -557,7 +559,9 @@
     "\n",
     "These flags dictate that each YB-TServer process will initially create just one tablet leader for a given table with hash sharding.\n",
     "\n",
-    "For this reason, with your three node cluster, a table will have a single tablet leader per node.  And since there are three nodes in your YugabyteDB cluster, there will be a total of three tablet leaders for a given table with hash sharding. The replication factor of three specifies that each tablet leader will have two tablet followers. "
+    "For this reason, with your three node cluster, a table will have a single tablet leader per node.  And since there are three nodes in your YugabyteDB cluster, there will be a total of three tablet leaders for a given table with hash sharding. The replication factor of three specifies that each tablet leader will have two tablet followers. \n",
+    "\n",
+    "</details>"
    ]
   },
   {
@@ -567,6 +571,8 @@
    "source": [
     "##### What is the `hash_split` value in the Partition column? \n",
     "\n",
+    "<details>\n",
+    "<summary><b>Show Answer</b></summary>\n",
     "For a table with hash sharding, each tablet has a Partition value that shows a  `hash_split` . The `hash_split` details a range of hexadecimal values. \n",
     "```\n",
     "hash_split: [0x0000, 0x5555)\n",
@@ -582,21 +588,17 @@
     "\n",
     "In other words, the Partition value for hash sharding represents a range of hexadecimal values starting with 0 and ending with 65535. Here is illustration of consistent hash sharding:\n",
     "\n",
-    "<img  style=\"background-color:#FFF\" src=\"assets/hash_sharding.png\" >"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<img  style=\"background-color:#FFF\" src=\"assets/hash_sharding.png\" >\n",
+    "\n",
     "In this illustration, the primary key (PK) is the partition key. In the table above, there is no declared primary key, but there is `ybrowid`. `ybrowid` functions as a hidden PK for a row with a random Universal Unique Identifier (UUID) value. As a result,  `ybrowid` serves as the partition key for the table without a declared PK.\n",
     "\n",
     "The hash value of the partition key results in a hexadecimal value. This value falls between the lower and upper values of a `hash_split` range for a tablet leader. \n",
     "\n",
     "YSQL has an built-in function that shows the integer form of the hash code: `yb_hash_code()` . This built-in function returns an integer, making it easier to interpret the hexadecimal values of a hash_splt range.\n",
     "\n",
-    "However, because YugabyteDB does not expose `ybrowid` to a database user, it is not possible to use `yb_hash_code()` to determine what is the integer value for the hash code of `ybrowid`. "
+    "However, because YugabyteDB does not expose `ybrowid` to a database user, it is not possible to use `yb_hash_code()` to determine what is the integer value for the hash code of `ybrowid`. \n",
+    "\n",
+    "</details>"
    ]
   },
   {
@@ -837,19 +839,26 @@
     "Question: \n",
     "- In the query cell above, comment out the `order by k asc` line. Rerun the query cell. What new observations can you make about the results?\n",
     "\n",
-    "Answer:\n",
+    "<details>\n",
+    "<summary><b>Show Answer</b></summary>\n",
+    "\n",
     "- The results are in the order of `k_hash_code`, not `k`.\n",
     "- YugabyteDB only returns `k_hash_code` ordered results and these 30 row sare from the first hash_split range, `0-21845`.\n",
     "- The `k_hash_code` ordering is how the internal LSM-Tree sorted the table inserts.\n",
     "- For the given tablet, the LSM-tree persists to disk as Sorted Sequence Tables (SST files).\n",
     "- The reads come from the SST file for the tablet. For this reason, you can rerun the query over and over again and still see the same \"order\" (`k_hash_code`) of \"unordered\" (`k`) results.\n",
     "\n",
+    "</details>\n",
     "\n",
     "Question: \n",
     "- In the query above, with the `order by k` line already commented out, uncomment the `offset 330` line. Rerun the query cell. What observations can you make about the results?\n",
     "\n",
-    "Answer:\n",
-    "- YugabyteDB only returns `k_hash_code` ordered results from the beginning of the offset, which spans two hash_split ranges, indicating that the hash sharding is more or less evenly split among the tablets.\n"
+    "<details>\n",
+    "<summary><b>Show Answer</b></summary>\n",
+    "\n",
+    "- YugabyteDB only returns `k_hash_code` ordered results from the beginning of the offset, which spans two hash_split ranges, indicating that the hash sharding is more or less evenly split among the tablets.\n",
+    "\n",
+    "</details>"
    ]
   },
   {
@@ -955,7 +964,9 @@
     "Question: \n",
     "- In the query cell above, comment out the `order by k` line. Rerun the query cell. What new observations can you make about the results?\n",
     "\n",
-    "Answer:\n",
+    "<details>\n",
+    "<summary><b>Show Answer</b></summary>\n",
+    "\n",
     "- Even though the Explain Plan shows that this is a `Seq Scan` query:\n",
     "  - `-> Seq Scan on public.tbl_pk_hash (actual time=1.072..5.176 rows=30 loops=1`\n",
     "\n",
@@ -966,13 +977,16 @@
     "\n",
     "- YugabyteDB returns the unordered results and from the first hash_split range, `0-21845`.\n",
     "- The \"unordered\" results are actually returned as they were ordered in the LSM-Tree as Sorted Sequence Tables (SST files). For this reason, you can rerun the query over and over again and still see the same \"order\" of \"unordered\" results. \n",
-    "\n",
+    "- \n",
+    "</details>\n",
     "\n",
     "Question: \n",
     "- With the `order by k` line commented out, what happens when you uncomment the `offset 330` lines and run the  Explain Plan and Metrics cells again? How does the output of Explain Plan compare to the Metrics output?\n",
     "\n",
     "\n",
-    "Answer:\n",
+    "<details>\n",
+    "<summary><b>Show Answer</b></summary>\n",
+    "\n",
     "- YugabyteDB returns results from the beginning of the offset, which, if the hash sharding is more or less evenly split, should span two hash_split ranges. Even though the Explain Plan shows that this is a `Seq Scan` query:\n",
     "  - `-> Seq Scan on public.tbl_pk_hash (actual time=4.039..55.580 rows=360 loops=1)`\n",
     "\n",
@@ -981,7 +995,9 @@
     "| row_name| \trocksdb_number_db_seek | \trocksdb_number_db_next | \n",
     "|--|--|--|\n",
     "| db_ybu tbl_pk_hash link_table_id tablet_id_unq_1\t | 1 | \t689 |\n",
-    "| db_ybu tbl_pk_hash link_table_id tablet_id_unq_2\t| 1\t| 641 |\n"
+    "| db_ybu tbl_pk_hash link_table_id tablet_id_unq_2\t| 1\t| 641 |\n",
+    "\n",
+    "</details>\n"
    ]
   },
   {
@@ -1026,6 +1042,13 @@
     " fn_random_name(1,0),\n",
     " fn_random_name(0,1)\n",
     "from generate_series(1, 100) AS g (id);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Review the database definition."
    ]
   },
   {
@@ -1502,7 +1525,9 @@
     "- Uncomment the `order by k desc` line. Rerun the Explain Plan and the Metrics prepared statement. What new observations can you make? \n",
     "\n",
     "\n",
-    "Answer:\n",
+    "<details>\n",
+    "<summary><b>Show Answer</b></summary>\n",
+    "\n",
     "- The Explain Plan shows that query uses `-> Index Scan Backward` for the PK index.\n",
     "- The Metrics shows that the Index Scan Backward operations resulted in 64 seeks and only 62 reads. For thirty rows (`limit 30`), this means that there a two seeks per each backwards operation!\n",
     "\n",
@@ -1512,7 +1537,9 @@
     "| db_ybu tbl_pk_range link_table_id tablet_id_unq_1\t | 64 | \t62 |\n",
     "\n",
     "\n",
-    "When fetching rows in reverse order of the index, with `Index Scan Backward`, there is no next call to go backwards. Instead, there are two seeks to go backwards. For this reason, the range sharding order of the primary key (`asc` or `desc`) may not be optimal for queries with an `Index Scan Backward` plan. \n"
+    "When fetching rows in reverse order of the index, with `Index Scan Backward`, there is no next call to go backwards. Instead, there are two seeks to go backwards. For this reason, the range sharding order of the primary key (`asc` or `desc`) may not be optimal for queries with an `Index Scan Backward` plan. \n",
+    "\n",
+    "</details>\n"
    ]
   },
   {
@@ -1622,9 +1649,12 @@
     "- In the Explain Plan cell, first comment out `from tbl_pk_hash` and then uncomment `from tbl_pk_range`. Rerun the Explain Plan and the Metrics prepared statement. What new observations can you make? \n",
     "\n",
     "\n",
-    "Answer:\n",
+    "<details>\n",
+    "<summary><b>Show Answer</b></summary>\n",
+    "\n",
     "- Besides being different tables and tablets, the Explain Plan and the Metrics report are essentially identical. Both Explain Plans use the PK index and both access one tablet.\n",
-    "\n"
+    "\n",
+    "</details>\n"
    ]
   },
   {
@@ -1727,12 +1757,15 @@
     "- In the Explain Plan cell, first comment out `from tbl_pk_hash` and then uncomment `from tbl_pk_range`. Rerun the Explain Plan and the Metrics prepared statement. What new observations can you make? \n",
     "\n",
     "\n",
-    "Answer:\n",
+    "<details>\n",
+    "<summary><b>Show Answer</b></summary>\n",
+    "\n",
     "- The `from tbl_pk_range` is an extremely efficient query.\n",
     "- The query uses the PK index, `Index Scan using tbl_pk_range_pkey on public.tbl_pk_range (actual time=0.816..0.825 rows=30 loops=1`.\n",
     "- The YB-TServer for the client connection does not filter any rows. \n",
     "- Because the table employs range sharding, the query access the single tablet for the table using 1 seek for the offset, and about two reads per row (`limit 30`).\n",
-    "\n"
+    "\n",
+    "</details>"
    ]
   },
   {
