--- a/04_Anatomy_of_an_Index.ipynb
+++ b/04_Anatomy_of_an_Index.ipynb
@@ -5,12 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div><br>\n",
+    "<div style=\"width:100%; background-color: #121017;\"><a target=\"_blank\" href=\"http://university.yugabyte.com?utm_source=gitpod&utm_medium=notebook\"><img src=\"assets/YBU_Logo.png\" /></a></div><br>\n",
     "\n",
     "> **YugabyteDB YSQL Development**\n",
     ">\n",
-    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/courses/yugabytedb-ysql-development).\n",
+    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/courses/yugabytedb-ysql-development?utm_source=gitpod&utm_medium=notebook).\n",
     ">\n",
+    "\n",
     "<br>\n",
     "This notebook file is:\n",
     "\n",
@@ -73,7 +74,7 @@
    "metadata": {},
    "source": [
     "## ⛑️ Getting help\n",
-    "The best way to get help from the Yugabyte University team is to post your question on YugabyteDB Community Slack in the #training or #yb-university channels. To sign up, visit [https://communityinviter.com/apps/yugabyte-db/register](https://communityinviter.com/apps/yugabyte-db/register).\n"
+    "The best way to get help from the Yugabyte University team is to post your question on YugabyteDB Community Slack in the #training channels. To sign up, visit [YugabyteDB Community Slack](https://join.slack.com/t/yugabyte-db/shared_invite/zt-xbd652e9-3tN0N7UG0eLpsace4t1d2A?utm_source=gitpod&utm_medium=notebook)."
    ]
   },
   {
@@ -542,7 +543,7 @@
     "\n",
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -565,6 +566,7 @@
     "Peak Memory Usage: 8 kB\n",
     "```\n",
     "</details>\n",
+    "\n",
     "The Explain Plan shows that this query uses the index and reads 2 rows\n",
     "- `Index Scan using idx_cities_city_name_range on public.tbl_cities (actual time=6.392..6.397 rows=2 loops=1)`\n",
     "\n",
@@ -667,7 +669,7 @@
     "#### q1b | Explain plan (above ^^)\n",
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -740,16 +742,23 @@
     "\n",
     "Question: What happens when the query includes the PK column, `city_id`,  in the select command? \n",
     "\n",
-    "Answer:\n",
+    "<details>\n",
+    "<summary><b>Show Answer</b></summary>\n",
+    "\n",
     "  - The Explain Plan becomes an `Index Scan`\n",
     "  - The query eads from a tablet for `tbl_cities`\n",
     "  - The reason? The tuple for the index, `ybidxbasectid`, encodes the PK pointer. YugabyteDB at this time is unable to use this PK encoding in results. This is a known issue.\n",
     "\n",
+    "</details>\n",
+    "\n",
     "Question: What happens the query includes a PK equality clause in the predicate?\n",
     "\n",
-    "Answer:\n",
+    "<details>\n",
+    "<summary><b>Show Answer</b></summary>\n",
+    "\n",
     "- The query will use the PK index, `tbl_cities_pkey`, and not the secondary index.\n",
-    "\n"
+    "\n",
+    "</details>\n"
    ]
   },
   {
@@ -838,7 +847,7 @@
     "#### q1c | Explain plan (above ^^)\n",
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -951,7 +960,7 @@
     "#### q1d | Explain Plan (above ^^)\n",
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -1202,7 +1211,7 @@
     "\n",
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -1323,7 +1332,7 @@
     "\n",
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "     <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -1438,7 +1447,7 @@
     "\n",
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -1551,7 +1560,7 @@
     "\n",
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -1712,7 +1721,7 @@
     "\n",
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -1854,7 +1863,7 @@
     "\n",
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -2009,7 +2018,7 @@
     "\n",
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
