--- a/06_Geo-partitioning.ipynb
+++ b/06_Geo-partitioning.ipynb
@@ -5,12 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div><br>\n",
+    "<div style=\"width:100%; background-color: #121017;\"><a target=\"_blank\" href=\"http://university.yugabyte.com?utm_source=gitpod&utm_medium=notebook\"><img src=\"assets/YBU_Logo.png\" /></a></div><br>\n",
     "\n",
     "> **YugabyteDB YSQL Development**\n",
     ">\n",
-    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/courses/yugabytedb-ysql-development).\n",
+    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/courses/yugabytedb-ysql-development?utm_source=gitpod&utm_medium=notebook).\n",
     ">\n",
+    "\n",
     "<br>\n",
     "This notebook file is:\n",
     "\n",
@@ -53,6 +54,14 @@
     "<img width=50% src=\"assets/01_02_Select_Kernel_Dropdown.png\" />\n",
     "\n",
     "That's it!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ⛑️ Getting help\n",
+    "The best way to get help from the Yugabyte University team is to post your question on YugabyteDB Community Slack in the #training channels. To sign up, visit [YugabyteDB Community Slack](https://join.slack.com/t/yugabyte-db/shared_invite/zt-xbd652e9-3tN0N7UG0eLpsace4t1d2A?utm_source=gitpod&utm_medium=notebook)."
    ]
   },
   {
@@ -261,7 +270,7 @@
     "\n",
     "Because partitioned tables do not appear nor act differently from the original table, applications accessing the database are not always aware of table partitioning.\n",
     "\n",
-    "YSQL supports the following types of partitioning:\n",
+    "YSQL supports the following types of table partitioning:\n",
     "\n",
     "- *Range partitioning*<br> when a table is partitioned into ranges defined by one or more key columns. In this case, the ranges of values assigned to partitions do not overlap.\n",
     "\n",
@@ -542,7 +551,7 @@
     "\n",
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -691,7 +700,7 @@
    "source": [
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -762,11 +771,14 @@
     "Question:\n",
     "- Why is there only one index partition for the partitioned table?\n",
     "\n",
-    "Answer:\n",
+    "<details>\n",
+    "<summary><b>Show Answer</b></summary>\n",
     "- The index uses range sharding! A tablet for a user table or index with a partition key using range starts with just one tablet leader on a single node, and as it grows will split into two tablets, and so on.\n",
     "\n",
     "Take a look at the definition below:\n",
-    "- `USING lsm (change_date DESC)`"
+    "- `USING lsm (change_date DESC)`\n",
+    "\n",
+    "</details>"
    ]
   },
   {
@@ -828,7 +840,7 @@
     "  \n",
     "To learn more about table partitioning, check out:\n",
     "\n",
-    "<a href target=\"_blank\" href=\"https://docs.yugabyte.com/preview/explore/ysql-language-features/advanced-features/partitions\">Table Partitioning</a> at docs.yugabyte.com."
+    "<a href target=\"_blank\" href=\"https://docs.yugabyte.com/preview/explore/ysql-language-features/advanced-features/partitions?utm_source=gitpod&utm_medium=notebook\">Table Partitioning</a> at docs.yugabyte.com."
    ]
   },
   {
@@ -895,7 +907,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print (NB_YB_MASTER_HOST_GITPOD_URL)"
+    "print(NB_YB_MASTER_HOST_GITPOD_URL)"
    ]
   },
   {
@@ -949,7 +961,7 @@
     "\n",
     "cd $YB_PATH_BIN\n",
     "\n",
-    "#  can't do with sql magic \n",
+    "# can't do with sql magic :-(\n",
     "# needs double quote esacpe for bash because of JSON\n",
     "#\n",
     "# create tablespace tblspace_us with (replica_placement=\n",
@@ -958,6 +970,7 @@
     "#       \"cloud\": \"cloud1\", \"region\": \"region1\", \"zone\": \"zone1\", \"min_num_replicas\": 1}]\n",
     "#   }'\n",
     "# );\n",
+    "\n",
     "DDL_TABLESPACE_US=\"drop tablespace if exists tblspace_us; create tablespace tblspace_us with (replica_placement='{\"\\\"num_replicas\"\\\": 1, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud1\"\\\", \"\\\"region\"\\\": \"\\\"region1\"\\\", \"\\\"zone\"\\\": \"\\\"zone1\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
     "\n",
     "echo $DDL_TABLESPACE_US | ./ysqlsh -d ${DB_NAME}"
@@ -987,14 +1000,12 @@
     "\n",
     "cd $YB_PATH_BIN\n",
     "\n",
-    "#  can't do with sql magic \n",
+    "# can't do with sql magic :-(\n",
     "# needs double quote esacpe for bash because of JSON\n",
     "\n",
     "DDL_TABLESPACE_EU=\"drop tablespace if exists tblspace_eu; create tablespace tblspace_eu with (replica_placement='{\"\\\"num_replicas\"\\\": 1, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud1\"\\\", \"\\\"region\"\\\": \"\\\"region2\"\\\", \"\\\"zone\"\\\": \"\\\"zone2\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
     "\n",
-    "echo $DDL_TABLESPACE_EU | ./ysqlsh -d ${DB_NAME}\n",
-    "\n",
-    "\n"
+    "echo $DDL_TABLESPACE_EU | ./ysqlsh -d ${DB_NAME}"
    ]
   },
   {
@@ -1021,7 +1032,7 @@
     "\n",
     "cd $YB_PATH_BIN\n",
     "\n",
-    "#  can't do with sql magic \n",
+    "# can't do with sql magic :-(\n",
     "# needs double quote esacpe for bash because of JSON\n",
     "\n",
     "DDL_TABLESPACE_AP=\"drop tablespace if exists tblspace_ap; create tablespace tblspace_ap with (replica_placement='{\"\\\"num_replicas\"\\\": 1, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud1\"\\\", \"\\\"region\"\\\": \"\\\"region3\"\\\", \"\\\"zone\"\\\": \"\\\"zone3\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
@@ -1267,7 +1278,7 @@
     "where 1=1\n",
     "  and geo_partition ='AP'\n",
     "-- and geo_partition ='EU'\n",
-    "--  and geo_partition ='US'\n",
+    "-- and geo_partition ='US'\n",
     "limit 10;"
    ]
   },
@@ -1317,7 +1328,7 @@
    "source": [
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -1438,7 +1449,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print (NB_YB_MASTER_HOST_GITPOD_URL)"
+    "print(NB_YB_MASTER_HOST_GITPOD_URL)"
    ]
   },
   {
@@ -1534,7 +1545,7 @@
    "source": [
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -1719,7 +1730,7 @@
    "source": [
     "<details>\n",
     "      <summary>\n",
-    "      View Example Output\n",
+    "      <b>View Example Output</b>\n",
     "      </summary>\n",
     "\n",
     "```sql\n",
@@ -1759,7 +1770,7 @@
    "metadata": {},
    "source": [
     "To learn more about the `yb_is_local_table` built-in function, check out:\n",
-    "- [Docs --> yb_is_local_table](https://docs.yugabyte.com/preview/api/ysql/exprs/geo_partitioning_helper_functions/func_yb_is_local_table/)"
+    "- [Docs --> yb_is_local_table](https://docs.yugabyte.com/preview/api/ysql/exprs/geo_partitioning_helper_functions/func_yb_is_local_table/?utm_source=gitpod&utm_medium=notebook)"
    ]
   },
   {
