--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "<summary>About Jupyter notebooks</summary>\n",
+    "<summary><b>About Jupyter notebooks</b></summary>\n",
     "\n",
     "## About Jupyter notebooks\n",
     "\n",
